# rv-libdec

./: .gitmodules  CMakeLists.txt  README.md
include/: rv-dec.h
src/: dec.c  dec.h  dec_amo.c  dec_auipc.c  dec_branch.c  dec_compr.c  dec_cust.c  dec_ext48.c  dec_ext64.c  dec_ext80.c  dec_fma.c  dec_jal.c  dec_jalr.c  dec_load.c  dec_loadfp.c  dec_lui.c  dec_misc.c  dec_op.c  dec_op32.c  dec_opfp.c  dec_opimm.c  dec_opimm32.c  dec_rsvd.c  dec_store.c  dec_storefp.c  dec_sys.c  extr.c
